# Solana-CrossProgram-Liquidity

./: Anchor.toml  Cargo.toml
app/router-bot/: Cargo.toml  HOW_IT_WORKS.md  README.md
app/router-bot/benches/: routing_benchmark.rs
app/router-bot/examples/: detailed_demo.rs
app/router-bot/proptest-regressions/: calculator.txt
app/router-bot/src/: calculator.rs  client.rs  config.rs  error.rs  executor.rs  lib.rs  main.rs
app/router-bot/src/dex/: meteora.rs  mod.rs  orca.rs  phoenix.rs  raydium.rs
app/router-bot/src/router/: mod.rs  multihop.rs  single.rs  split.rs
app/router-bot/src/types/: mod.rs  pool.rs  route.rs
app/router-bot/tests/: devnet_routing_test.rs  integration_test.rs
programs/solana-liquidity-router/: Cargo.toml
programs/solana-liquidity-router/src/: lib.rs
tests/: solana-liquidity-router.ts
