[package]
name = "router-bot"
version = "0.1.0"
edition = "2024"

[dependencies]
anchor-client = "0.32.1"
anyhow = "1.0.100"
bs58 = "0.5"
clap = { version = "4.5", features = ["derive"] }
env_logger = "0.11.8"
log = "0.4.28"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
solana-account-decoder = "3.1.1"
solana-client = "3.1.1"
solana-sdk = "3.0.0"
spl-token = "9.0.0"
thiserror = "2.0"
tokio = { version = "1.48.0", features = ["full"] }
toml = "0.8"

[dev-dependencies]
criterion = "0.5"
mockall = "0.13"
proptest = "1.4"

[[bench]]
name = "routing_benchmark"
harness = false
